# demo_HFT_System

./: .gitignore  BUILD_VERIFICATION.md  CMakeLists.txt  README.md  build.sh  run_tests.sh
benchmarks/: benchmark_main.cpp
config/: trading.conf
docs/: ADVANCED_DATASTRUCTURES.md  INTERVIEW_GUIDE.md  TUNING.md
include/common/: bit_utils.h  circular_buffer.h  config.h  hashmap.h  logger.h  memory_pool.h  timestamp.h
include/market_data/: market_data_handler.h  order_book.h
include/network/: tcp_sender.h  udp_receiver.h
include/trading/: order_manager.h  strategy.h
src/: main.cpp
src/common/: config.cpp  logger.cpp  timestamp.cpp
src/market_data/: market_data_handler.cpp  order_book.cpp
src/network/: tcp_sender.cpp  udp_receiver.cpp
src/trading/: order_manager.cpp  strategy.cpp
tests/: test_advanced_ds.cpp  test_lockfree.cpp  test_order_book.cpp
